--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id excepturi neque, delectus nihil laboriosam saepe adipisci incidunt nisi maxime facilis! Necessitatibus dicta provident, delectus officiis eius laboriosam excepturi dolores sit?</p>
         </article>
-        <article>Artigo 002</article>
-        <p>Texto Artigo 002</p>
+        <article>Curso de JavaScript</article>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab at minus animi, quam voluptas eligendi obcaecati laboriosam cum iste voluptate voluptates in libero quas, corporis assumenda distinctio necessitatibus. Iure, nam!</p>
     </main>
 </body>
 </html>
